# algorithms

./: desktop.ini  l;abirint.docx
Metoda greedy(metoda optimului local)/: (problema rucsacului)problema ocuparii optime a mijlocului de trasport.cpp  automobilist(oras A,oras B).cpp  bancnote.txt  cea mai valoroasa incarcatura(n obiecte,mximum G kg,obiectele pot fi fractionate).cpp  elemente.txt  elemente2.txt  greedy1.txt  greedy2.txt  inaltimi.txt  k casute ,n turisti,365 zile.cpp  n pacienti,ti timp necesar pt fiecare consultatie,timpul total de asteptare al pacientilor sa fie minim.cpp  obiecte.txt  pacienti.txt  planificate n spectacole.cpp  polinom(valoarea lui P(x) intr-un x precizat).cpp  polinom.txt  problema expresiei de valoare maxima.cpp  problema planificarii optime a activitatilor.cpp  problema platii unei sume cu un numar minim de bacnote cu valori date.cpp  spectacole.txt  statii.txt  traseu de munte.cpp  turisti.txt  (+2 more)
algorithms/: CMakeLists.txt
algorithms/source/algolib/: CMakeLists.txt
algorithms/source/app/: CMakeLists.txt
algorithms/source/app/src/: main.cpp
algorithms/source/backtracking/: CMakeLists.txt
algorithms/source/backtracking/include/: backtracking-iterative.h  backtracking-recursive.h  efficient-next-permutation.h  subsets-using-bits.h
algorithms/source/backtracking/src/: backtracking-iterative.cpp  backtracking-recursive.cpp  efficient-next-permutation.cpp  subsets-using-bits.cpp
algorithms/source/divide_et_impera/: CMakeLists.txt
algorithms/source/divide_et_impera/include/: binary-search.h  mergesort.h  quicksort.h
algorithms/source/divide_et_impera/src/: binary-search.cpp  mergesort.cpp  quicksort.cpp
algorithms/source/dynamic_programming/: CMakeLists.txt
algorithms/source/dynamic_programming/include/: knapsack.h  longest_increasing_subsequence.h  maximum_sum_in_triangle.h  pipe_problem.h  s_as_sum_of_n_given_numbers.h
algorithms/source/dynamic_programming/src/: knapsack.cpp  longest_increasing_subsequence.cpp  maximum_sum_in_triangle.cpp  pipe_problem.cpp  s_as_sum_of_n_given_numbers.cpp
algorithms/source/graphs/: CMakeLists.txt
algorithms/source/graphs/src/: algorithm-discovering-road-with-minimal-cost.cpp  dijkstra-algorithm.cpp  minimum-cost-spanning-tree-kruskal.cpp  minimum-cost-spanning-tree-prim.cpp  roy-floyd.cpp  roy-warshall-algoritm-for-discovering-road-matrix.cpp
algorithms/source/greedy/: CMakeLists.txt
algorithms/source/greedy/include/: activities_scheduling.h  expression_of_maximal_value.h  expression_of_minimal_value.h  maximum_subset_sum.h  minimal_waiting_time_for_patients.h  mountain_trail.h  optimal_number_of_stations_between_cities.h  payment_with_minimal_value_of_bancnotes.h  the_most_valuable_charge.h  tourists_houses_scheduling.h  value_of_polygon_in_given_x.h
algorithms/source/greedy/src/: activities_scheduling.cpp  algo.cpp  expression_of_maximal_value.cpp  expression_of_minimal_value.cpp  maximum_subset_sum.cpp  minimal_waiting_time_for_patients.cpp  mountain_trail.cpp  optimal_activity_scheduling.cpp  optimal_number_of_stations_between_cities.cpp  payment_with_minimal_value_of_bancnotes.cpp  the_most_valuable_charge.cpp  tourists_houses_scheduling.cpp  value_of_polygon_in_given_x.cpp
algorithms/source/infoarena/: CMakeLists.txt
algorithms/source/threads/: CMakeLists.txt
algorithms/source/trees/: CMakeLists.txt  heap.in  rooted_tree.in  tree.in
algorithms/source/trees/include/: binary_search_tree.h  custom_type.h  dynamic_binary_tree_parse.h  dynamic_tree.h  heap.h  left_right_child_representation.h  parent_childtype_representation.h  static_binary_tree_parse.h  tree_traversal.h
algorithms/source/trees/src/: binary_search_tree.cpp  dynamic_binary_tree_parse.cpp  dynamic_tree.cpp  heap.cpp  left_right_child_representation.cpp  parent_childtype_representation.cpp  static_binary_tree_parse.cpp  tree_traversal.cpp
algorithms/test/algolib_utest/src/: main.cpp
algorithms/test/backtracking_test/: CMakeLists.txt
algorithms/test/backtracking_test/src/: backtracking-iterative_test.cpp  backtracking-recursive_test.cpp  efficient-next-permutation_test.cpp  subsets-using-bits_test.cpp
algorithms/test/backtracking_utest/: CMakeLists.txt
algorithms/test/divide_et_impera_test/: CMakeLists.txt
algorithms/test/divide_et_impera_test/src/: binary-search_test.cpp  mergesort_test.cpp  quicksort_test.cpp
algorithms/test/divide_et_impera_utest/: CMakeLists.txt
algorithms/test/dynamic_programming_test/: CMakeLists.txt
algorithms/test/dynamic_programming_test/src/: knapsack_test.cpp  longest_increasing_subsequence_test.cpp  maximum_sum_in_triangle_test.cpp  pipe_problem_test.cpp  s_as_sum_of_n_given_numbers_test.cpp
algorithms/test/dynamic_programming_utest/: CMakeLists.txt
algorithms/test/graphs_test/: CMakeLists.txt
algorithms/test/graphs_test/src/: minimum-cost-spanning-tree-kruskal_test.cpp
algorithms/test/graphs_utest/: CMakeLists.txt
algorithms/test/greedy_test/: CMakeLists.txt
algorithms/test/greedy_test/src/: activities_scheduling_test.cpp  expression_of_maximal_value_test.cpp  expression_of_minimal_value_test.cpp  maximum_subset_sum_test.cpp  minimal_waiting_time_for_patients_test.cpp  mountain_trail_test.cpp  optimal_activity_scheduling_test.cpp  optimal_number_of_stations_between_cities_test.cpp  payment_with_minimal_value_of_bancnotes_test.cpp  the_most_valuable_charge_test.cpp  tourists_houses_scheduling_test.cpp  value_of_polygon_in_given_x_test.cpp
algorithms/test/greedy_utest/: CMakeLists.txt
algorithms/test/infoarena_test/: CMakeLists.txt
algorithms/test/infoarena_utest/: CMakeLists.txt
algorithms/test/threads_test/: CMakeLists.txt
algorithms/test/threads_utest/: CMakeLists.txt
algorithms/test/trees_test/: CMakeLists.txt
algorithms/test/trees_test/src/: binary_search_tree_test.cpp  dynamic_binary_tree_parse_test.cpp  dynamic_tree_test.cpp  heap_test.cpp  left_right_child_representation_test.cpp  parent_childtype_representation_test.cpp  static_binary_tree_parse_test.cpp  tree_traversal_test.cpp
algorithms/test/trees_utest/: CMakeLists.txt
(+753 files in other folders)
